# momitest

./: pyproject.toml
src/momi/: __init__.py  csvrepo.py
src/momi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: csvrepo_test.py  momi_test.py
test/fixture/: pg01.csv
