[tool.poetry]
name = "momi"
version = "0.1.0"
description = ""
authors = ["Shoma FUKUDA <fkshom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyvmomi = "^7.0.1"
cerberus = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-watch = "^4.2.0"
assertpy = "^1.1"
superdiff = "^1.0.1"
pytest-diff = "^0.1.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
